--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/plus_delta_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -27,6 +27,11 @@
         <activity
             android:name=".DeltaActivity"
             android:label="@string/title_activity_delta"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".Plus"
+            android:label="@string/title_activity_plus"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
